--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#8b52ff" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Find your perfect partner."
     />
+    <meta property="og:title" content="Inayum Thunayum"/>
+    <meta property="og:description" content="Find your perfect partner."/>
+    <link rel="icon" href="../src/assets/loading-img.png">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" > -->
-    <title>React App</title>
+    <title>Inayum Thunayum</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
